tests/fails/fnindex.t


terra foo()
end

terra bar()
    return foo + 1
end

bar()